--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ body {
 	html,
 	body {
 		background-color: rgba(255, 255, 255, 1);
-		background-image: url('../img/background-gradient_1280.svg');
+		background-image: url('../img/background-gradient>1280.svg');
 		background-position: center;
 		background-size: cover;
 	}
